--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.16'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'org.springframework.boot' version '3.1.4'
+	id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '11'
+	sourceCompatibility = '17'
 }
 
 repositories {
@@ -16,8 +16,15 @@ repositories {
 }
 
 dependencies {
+    compileOnly "com.sun.xml.ws:jaxws-rt:4.0.1"
+    compileOnly "org.glassfish.jaxb:jaxb-runtime:4.0.3"
+
 	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	rewrite "org.glassfish.jaxb:jaxb-runtime:2.3.8"
+	testImplementation "com.sun.xml.ws:jaxws-rt:4.0.1"
+    testImplementation "org.glassfish.jaxb:jaxb-runtime:4.0.3"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
